<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ImageFragment"
    android:background="@drawable/image_fon">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp"/>

    <TextView
        android:id="@+id/tv_talk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talk_me_down"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="64dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_neighbourhood"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_talk"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>